# erlang-bulletproofs

./: README.md  rebar.config
.github/workflows/: erlang.yml
crates/native/: Cargo.toml
crates/native/src/: bulletproof_gens.rs  compressed_ristretto.rs  lib.rs  pedersen_gens.rs  range_proof.rs  scalar.rs  transcript.rs
src/: erlang_bulletproofs.app.src  erlang_bulletproofs.erl
test/: basic_test.erl
