[package]
name = "native"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git", branch = "master" }
bulletproofs = { git = "https://github.com/vihu/bulletproofs.git", branch = "rg/remove-toolchain" }
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
hex = "0.3"
rand = { version = "0.7", default-features = false}
merlin = { version = "2", default-features = false }

[patch.crates-io]
merlin = { git = "https://github.com/vihu/merlin.git", branch = "rg/remove-static" }
